--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^14.2.15",
     "@reduxjs/toolkit": "^2.2.7",
     "next": "14.2.13",
     "react": "^18",
